# insurance-garch

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_garch_motor_inflation_demo.py  benchmark_garch.py
src/insurance_garch/: __init__.py  backtest.py  forecast.py  model.py  report.py  series.py
tests/: conftest.py  test_backtest.py  test_forecast.py  test_integration.py  test_model.py  test_report.py  test_series.py
