[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-garch"
version = "0.1.0"
description = "GARCH volatility models for UK personal lines claims inflation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = ["insurance", "garch", "inflation", "volatility", "actuarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "arch>=7.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-garch"
Repository = "https://github.com/burning-cost/insurance-garch"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_garch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
